[package]
name = "accept-header"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/coriolinus/accept-header"
license = "MIT"
keywords = ["http", "header"]
publish = ["finvia-accept-header"]

[dependencies]
bstr = "1.8.0"
headers-core = "0.3.0"
mime = "0.3.17"
noisy_float = "0.2.0"
thiserror = "1.0.50"

[dev-dependencies]
itertools = "0.12.0"
